syntax = "proto3";

option java_package = "com.alex.space.proto";
option java_outer_classname = "GreeterProtocol";
option java_multiple_files = true;

import "greeter_protos.proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

