syntax = "proto3";

option java_package = "com.alex.space.proto";
option java_outer_classname = "GreeterProtos";
option java_multiple_files = true;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}